--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "todo app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" "
+    "test": "node app.js" "
   },
   "author": "Naveen",
   "license": "ISC",
